Focus movement between elements with the Tab key gets stuck somewhere. Once that happens, the Shift+Tab key also don't work at all.
Categories
(Core :: DOM: UI Events & Focus Handling, defect)
Tracking
()
People
(Reporter: alice0775, Assigned: sefeng211)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: access, nightly-community, regression)
Attachments
(2 files, 2 obsolete files)
|
995.50 KB,
application/x-zip-compressed
|
Details | |
|
48 bytes,
text/x-phabricator-request
|
dmeehan
:
approval-mozilla-beta+
|
Details | Review |
[Tracking Requested - why for this release]: Broken [Tab] key navigation
Steps to reproduce:
- Open https://syosetu.com/site/about/
- Press and repeat [Tab] key
Steps to reproduce(with the attached zip file):
- Unzip the attached zip to local file system
- Drag and drop the unzipped
小説家になろうについて サイト案内 小説家になろう.htmfrom File Explorer into Tab content area. - Press and repeat [Tab] key
Actual Results:
Focus movement between elements with the Tab key gets stuck.
Once that happens, the Shift+Tab key also do not work at all.
Expected Results:
Focus movement between elements by tab key should cycle infinitely.
Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=7b7144975b319945642a90653847a06d03f111b7&tochange=e43370e4259f61e0c264dbcef8b45e2862b3c5e8
Comment 1•2 years ago
|
||
:emilio, since you are the author of the regressor, bug 1847929, could you take a look? Also, could you set the severity field?
For more information, please visit BugBot documentation.
| Reporter | ||
Updated•2 years ago
|
| Reporter | ||
Comment 2•2 years ago
|
||
| Reporter | ||
Comment 3•2 years ago
•
|
||
Comment on attachment 9356283 [details]
reduced testcase.html
(edit 2023-10-12)
The attached testcase of comment#2 seems fixed by bug 1856514.
But str of comment#0 is still reproduced.
| Comment hidden (obsolete) |
| Reporter | ||
Updated•2 years ago
|
| Reporter | ||
Comment 5•2 years ago
|
||
FWIW,
Setting dom.input_events.security.minNumTicks to 0 also solve this issue.
Comment 6•2 years ago
|
||
That indicates that bug 1830820 is probably the root cause. My patch was probably overriding that for OOP iframes. Sean, maybe we just care about the top level page for the minNumTicks stuff?
Updated•2 years ago
|
| Assignee | ||
Comment 7•2 years ago
|
||
In my opinion, we care both the top level and the nested documents. Though looks like this is not the problem.
It's likely that fixing bug 1856514 can also fix this. I'll do some testing.
Comment 8•2 years ago
|
||
The bug is marked as tracked for firefox119 (beta) and tracked for firefox120 (nightly). However, the bug still isn't assigned.
:hsinyi, could you please find an assignee for this tracked bug? Given that it is a regression and we know the cause, we could also simply backout the regressor. If you disagree with the tracking decision, please talk with the release managers.
For more information, please visit BugBot documentation.
| Assignee | ||
Updated•2 years ago
|
| Assignee | ||
Comment 9•2 years ago
|
||
| Assignee | ||
Updated•2 years ago
|
S2, because this seems like it could trap keyboard-only users and this looks like a recent regression.
Comment 11•2 years ago
|
||
:sefeng we are in the last week of beta for Fx119. Will this land soon and can you add an uplift request when ready?
Updated•2 years ago
|
Comment 12•2 years ago
|
||
Setting Fx119 to Fixed, Bug 1858232 was uplifted to beta
| Reporter | ||
Updated•2 years ago
|
Comment 13•2 years ago
|
||
Comment 14•2 years ago
|
||
| bugherder | ||
Comment 15•2 years ago
|
||
Reproduced with Fx 120.0a1 (2023-10-02) on Windows 10.
Verified fixed with Fx 120.a01 (2023-10-12) (treeherder build) and Fx 119.0b9 (treeherder build) on Windows 10.
| Assignee | ||
Comment 16•2 years ago
•
|
||
Comment on attachment 9356735 [details]
Bug 1856497 - Allow user input events to bypass the delay handling check if this is a non-visible document r=smaug
Beta/Release Uplift Approval Request
- User impact if declined: User input may not be handled if
dom.input_events.security.minNumTicksis not 0 - Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: Yes
- If yes, steps to reproduce:
- Set
dom.input_events.security.minNumTicksto 3 - Use the STR in this bug.
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): The change itself is trivial
- String changes made/needed:
- Is Android affected?: Yes
| Assignee | ||
Updated•2 years ago
|
Comment 17•2 years ago
|
||
Comment on attachment 9356735 [details]
Bug 1856497 - Allow user input events to bypass the delay handling check if this is a non-visible document r=smaug
Approved for 119.0 RC1
Comment 18•2 years ago
|
||
| uplift | ||
Updated•2 years ago
|
Updated•2 years ago
|
Comment 19•2 years ago
|
||
| uplift | ||
Updated•2 years ago
|
Comment 20•2 years ago
|
||
Verified fixed with Fx 119.0 and Fx 115.4.0esr on Windows 10.
Description
•