Bug 1856497 - Allow user input events to bypass the delay handling check if this is a non-visible document r=smaug, a=dmeehan

Differential Revision: https://phabricator.services.mozilla.com/D190133